升级到1.2版